tests/negative/parser/multiline.orng
// multiline.orng:5:38: error: expected top-level declaration here, got `<multi-line>`
// \\ this is a simple multiline string!
//                                     ^
// 
\\ this is a simple multiline string!